<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.test.finish.FinishTestFragment">

    <TextView
        style="@style/TitleText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/score_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.allinx.english.presentation.test.finish.customview.AnalyticalPieChart
        android:id="@+id/analyticalPieChart"
        android:layout_width="wrap_content"
        android:layout_height="350dp"
        app:layout_constraintBottom_toTopOf="@+id/btnToTest"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:pieChartCircleSectionSpace="2"
        app:pieChartCircleStrokeWidth="6dp"
        app:pieChartColors="@array/analyticalPieChartColorArray"
        app:pieChartTextAmount="@string/analyticalPieChartAmount"
        app:pieChartTextAmountColor="@color/black"
        app:pieChartTextDescriptionColor="@color/night_rider"
        app:pieChartTextDescriptionSize="14sp"
        app:pieChartTextNumberColor="@color/black"
        app:pieChartTextNumberSize="16sp" />

    <Button
        android:id="@+id/btnToTest"
        style="@style/ButtonText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:background="@drawable/bg_button_selector"
        app:backgroundTintMode="multiply"
        android:text="@string/btn_back_to_test"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>