<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@color/white"
        android:isScrollContainer="true"
        android:orientation="vertical"
        tools:context=".presentation.edit.EditFragment">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            app:contentInsetStart="0dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:gravity="center"
                android:orientation="horizontal">

                <ImageButton
                    android:id="@+id/btnBack"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    android:background="@drawable/bg_btn_add_word"
                    android:src="@drawable/ic_arrow_back" />

                <TextView
                    android:id="@+id/wordTitleDetails"
                    style="@style/ToolBarText"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginEnd="30dp"
                    android:layout_weight="1"
                    android:ellipsize="end"
                    android:gravity="center"
                    android:text="@string/create_title_toolbar" />
            </LinearLayout>
        </androidx.appcompat.widget.Toolbar>

        <ImageView
            android:id="@+id/imgEdit"
            android:layout_width="250dp"
            android:layout_height="250dp"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:src="@drawable/placeholder" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_word"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="20dp"
            android:hint="@string/hint_input_word"
            app:boxStrokeColor="@color/persian_blue"
            app:boxStrokeErrorColor="@color/fire_engine_red"
            app:errorEnabled="true"
            app:errorTextColor="@color/fire_engine_red"
            app:hintTextColor="@color/persian_blue">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tiet_word"
                style="@style/EditText"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="start"
                android:inputType="text"
                android:textColor="@color/night_rider" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_meaning"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:hint="@string/hint_input_meaning"
            app:boxStrokeColor="@color/persian_blue"
            app:boxStrokeErrorColor="@color/fire_engine_red"
            app:errorEnabled="true"
            app:errorTextColor="@color/fire_engine_red"
            app:hintTextColor="@color/persian_blue">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tiet_meaning"
                style="@style/EditText"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="start"
                android:inputType="text"
                android:textColor="@color/night_rider" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btnSave"
            style="@style/ButtonText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_margin="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="40dp"
            android:background="@drawable/bg_button_selector"
            android:gravity="bottom"
            android:text="@string/btn_save"
            app:backgroundTintMode="multiply" />
    </LinearLayout>
</ScrollView>


