<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.study.StudyFragment">

    <TextView
        android:id="@+id/kolWords"
        style="@style/TitleText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="40dp"
        android:layout_marginBottom="60dp"
        app:layout_constraintBottom_toTopOf="@+id/img_study_word"
        app:layout_constraintEnd_toEndOf="parent"
        tools:text="3/28" />

    <com.github.siyamed.shapeimageview.RoundedImageView
        android:id="@+id/img_study_word"
        android:layout_width="match_parent"
        android:layout_height="350dp"
        android:layout_gravity="center"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="100dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:siRadius="45dp"
        app:siSquare="true"
        tools:src="@drawable/test_img" />

    <androidx.cardview.widget.CardView
        android:id="@+id/back_study_card"
        android:layout_width="match_parent"
        android:layout_height="350dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="100dp"
        android:background="@color/white"
        app:cardCornerRadius="45dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white">
            <TextView
                android:id="@+id/word_study"
                style="@style/BigBoldText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@color/white"
                tools:text="Power plant" />
        </FrameLayout>
    </androidx.cardview.widget.CardView>

    <Button
        android:id="@+id/btnFlip"
        style="@style/ButtonText"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:background="@drawable/bg_button_selector"
        android:text="@string/btn_flip_text"
        app:backgroundTintMode="multiply"
        app:layout_constraintEnd_toEndOf="@+id/img_study_word"
        app:layout_constraintStart_toStartOf="@+id/img_study_word"
        app:layout_constraintTop_toBottomOf="@+id/img_study_word" />

    <Button
        android:id="@+id/btnBack"
        style="@style/ButtonText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="40dp"
        android:background="@drawable/bg_button_selector"
        android:text="@string/btn_back_text"
        app:backgroundTintMode="multiply"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/img_study_word" />

    <Button
        android:id="@+id/btnNext"
        style="@style/ButtonText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="40dp"
        android:background="@drawable/bg_button_selector"
        android:text="@string/btn_next_text"
        app:backgroundTintMode="multiply"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/img_study_word" />


</androidx.constraintlayout.widget.ConstraintLayout>